--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
     - pip install pytest-cov pytest-pep8
     # - pip install -r requirements.txt
     # - pip install -e .
+    - pip install magma-lang mantle
 
 script:
     - pytest --cov magma_tutorial --pep8 magma_tutorial -v --cov-report term-missing tests
