--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ addons:
     packages:
       - g++-4.9
       - verilator
+      - libgmp-dev
+      - libmpfr-dev
+      - libmpc-dev
 python:
     - "3.6"
 
@@ -13,14 +16,8 @@ install:
     - wget https://raw.githubusercontent.com/phanrahan/magma/master/.travis/install_coreir.sh
     - source install_coreir.sh
 
-    # - pip install python-coveralls
     - pip install pytest-cov pytest-pep8
-    # - pip install -r requirements.txt
-    # - pip install -e .
     - pip install magma-lang mantle
 
 script:
     - pytest --cov magma_tutorial --pep8 magma_tutorial -v --cov-report term-missing tests
-
-# after_success:
-#     - coveralls
